fix spacing

--- a/frontend/src/components/MovieCard/movieCard.scss
+++ b/frontend/src/components/MovieCard/movieCard.scss
@@ -44,7 +44,7 @@ $background: rgb(14, 13, 13);
     .card__bottom {
         height: 150px;
         min-height: fit-content;
-        padding: 15px 20px;
+        padding: 11px 20px 15px 20px;
     }
 
     .card__overview {
@@ -56,7 +56,8 @@ $background: rgb(14, 13, 13);
     }
 
     .card__genres {
-        max-width: 300px;
+        display: flex;
+        flex-wrap: wrap;
     }
 
     .card__details {
